# earnings_tracker

./: README.md  config.toml  main.py  main_v0.py  money.py  pyproject.toml
data/: earnings.json
src/: cli.py  handlers.py  parser.py  utils.py
src/earnings_tracker/: cli.py  config.py  utils.py
tests/: test_report.py
