[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "earnings_tracker"
version = "0.0.1"
description = "Command-line based tool for keeping track of earnings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer"]

[project.scripts]
money = "earnings_tracker.cli:main"
